@@ -24,6 +24,7 @@ import com.hazelcast.core.HazelcastInstance;
 import com.hazelcast.cp.lock.FencedLock;
 import com.hazelcast.map.IMap;
 
+import de.tum.in.www1.artemis.domain.BuildLogEntry;
 import de.tum.in.www1.artemis.domain.enumeration.BuildStatus;
 import de.tum.in.www1.artemis.security.SecurityUtils;
 import de.tum.in.www1.artemis.service.connectors.localci.dto.*;
@@ -42,6 +43,8 @@ public class SharedQueueProcessingService {
     private final ThreadPoolExecutor localCIBuildExecutorService;
 
     private final BuildJobManagementService buildJobManagementService;
+
+    private final BuildLogsMap buildLogsMap;
 
     private final AtomicInteger localProcessingJobs = new AtomicInteger(0);
 
@@ -68,10 +71,12 @@ public class SharedQueueProcessingService {
 
     private UUID listenerId;
 
-    public SharedQueueProcessingService(HazelcastInstance hazelcastInstance, ExecutorService localCIBuildExecutorService, BuildJobManagementService buildJobManagementService) {
+    public SharedQueueProcessingService(HazelcastInstance hazelcastInstance, ExecutorService localCIBuildExecutorService, BuildJobManagementService buildJobManagementService,
+            BuildLogsMap buildLogsMap) {
         this.hazelcastInstance = hazelcastInstance;
         this.localCIBuildExecutorService = (ThreadPoolExecutor) localCIBuildExecutorService;
         this.buildJobManagementService = buildJobManagementService;
+        this.buildLogsMap = buildLogsMap;
     }
 
     /**
@@ -216,7 +221,7 @@ public class SharedQueueProcessingService {
         // TODO: Make this number configurable
         if (recentBuildJob != null) {
             if (recentBuildJobs.size() >= 20) {
-                recentBuildJobs.remove(0);
+                recentBuildJobs.removeFirst();
             }
             recentBuildJobs.add(recentBuildJob);
         }
@@ -261,7 +266,10 @@ public class SharedQueueProcessingService {
                     buildJob.courseId(), buildJob.exerciseId(), buildJob.retryCount(), buildJob.priority(), BuildStatus.SUCCESSFUL, buildJob.repositoryInfo(), jobTimingInfo,
                     buildJob.buildConfig(), null);
 
-            ResultQueueItem resultQueueItem = new ResultQueueItem(buildResult, finishedJob, null);
+            List<BuildLogEntry> buildLogs = buildLogsMap.getBuildLogs(buildJob.id());
+            buildLogsMap.removeBuildLogs(buildJob.id());
+
+            ResultQueueItem resultQueueItem = new ResultQueueItem(buildResult, finishedJob, buildLogs, null);
             resultQueue.add(resultQueueItem);
 
             // after processing a build job, remove it from the processing jobs
@@ -289,7 +297,10 @@ public class SharedQueueProcessingService {
 
             job = new LocalCIBuildJobQueueItem(buildJob, completionDate, status);
 
-            ResultQueueItem resultQueueItem = new ResultQueueItem(null, job, ex);
+            List<BuildLogEntry> buildLogs = buildLogsMap.getBuildLogs(buildJob.id());
+            buildLogsMap.removeBuildLogs(buildJob.id());
+
+            ResultQueueItem resultQueueItem = new ResultQueueItem(null, job, buildLogs, ex);
             resultQueue.add(resultQueueItem);
 
             processingJobs.remove(buildJob.id());
